objects/Campaign_Message__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Members__c</fullName>
        <label>Approved Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Message__c</fullName>
        <label>Campaign Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Subject__c</fullName>
        <label>Campaign Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Camping_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Failed_Members__c</fullName>
        <label>Failed Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rejected_Members__c</fullName>
        <label>Rejected Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Message</label>
    <nameField>
        <displayFormat>CME-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>